welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:21: error: not found: value break
       	break
        ^